--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Happy go-lucky introvert</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Toronto, Ontario</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking and Travelling</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To be independently wealthy.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Riverdale, Downtown Toronto</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Ask me again in 5 years</p>
     </section>
 
     <footer id="footer">
